--- a/WeatherApp/package.json
+++ b/WeatherApp/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.11.3",
     "mysql": "^2.18.1",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "request": "^2.88.2"
   }
 }
